[project]
name = "rigidformer"
version = "0.0.7"
description = "Implementation of Rigidformer"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'rigid dynamics',
    'attention mechanisms'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
]

dependencies = [
    "einx>=0.4.0",
    "einops>=0.8.1",
    "roma",
    "torch>=2.5",
    "torch-einops-utils>=0.1.0",
]

[project.urls]
Homepage = "https://pypi.org/project/rigidformer/"
Repository = "https://codeberg.org/lucidrains/rigidformer"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "rigidformer",
    "pyproject.toml",
    "README.md",
    "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["rigidformer"]
